_build/CrispASR/include/crispasr_session.h

struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_stream;
typedef struct crispasr_stream crispasr_stream;
CRISPASR_SESSION_API void crispasr_stream_close(crispasr_stream* s);
CRISPASR_SESSION_API int crispasr_stream_feed(crispasr_stream* s, const float* pcm, int n_samples);
CRISPASR_SESSION_API int crispasr_stream_get_text(crispasr_stream* s, char* out_text, int out_cap, double* out_t0_s,
                                                  double* out_t1_s, int64_t* out_counter);
CRISPASR_SESSION_API int crispasr_stream_flush(crispasr_stream* s);
CRISPASR_SESSION_API int crispasr_detect_backend_from_gguf(const char* path, char* out_name, int out_cap);
CRISPASR_SESSION_API int crispasr_enhance_audio_rnnoise(const float* in_pcm, int32_t n_samples, float* out_pcm,
                                                        int32_t out_cap);
CRISPASR_SESSION_API void crispasr_pcm_free(float* pcm);
CRISPASR_SESSION_API int crispasr_session_separate(crispasr_session* s, const float* pcm_stereo, int n_samples);
CRISPASR_SESSION_API int crispasr_session_separate_n_stems(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_separate_stem_name(crispasr_session* s, int stem_idx);
CRISPASR_SESSION_API const float* crispasr_session_separate_stem(crispasr_session* s, int stem_idx, int* out_n_samples);
CRISPASR_SESSION_API int crispasr_session_separate_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_pitch(crispasr_session* s, const float* pcm_16k, int n_samples, float hop_ms);
CRISPASR_SESSION_API int crispasr_session_pitch_n_frames(crispasr_session* s);
CRISPASR_SESSION_API const float* crispasr_session_pitch_frames(crispasr_session* s, int* out_n_frames);
CRISPASR_SESSION_API int crispasr_session_pitch_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_convert(crispasr_session* s, const float* content, int n_frames,
                                                  const float* f0_hz, int speaker_id, const float* noise_zp,
                                                  const float* noise_sine);
CRISPASR_SESSION_API const float* crispasr_session_convert_audio(crispasr_session* s, int* out_n_samples);
CRISPASR_SESSION_API int crispasr_session_convert_content_dim(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_convert_n_speakers(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_convert_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_tab(crispasr_session* s, const float* pcm, int n_samples, int sample_rate);
CRISPASR_SESSION_API int crispasr_session_tab_n_frames(crispasr_session* s);
CRISPASR_SESSION_API const float* crispasr_session_tab_emissions(crispasr_session* s, int* out_n_frames,
                                                                 int* out_n_strings, int* out_n_classes);
CRISPASR_SESSION_API int crispasr_session_tab_silent_class(crispasr_session* s);
CRISPASR_SESSION_API float crispasr_session_tab_frame_period(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_tab_string_open_midi(crispasr_session* s, int string);
CRISPASR_SESSION_API int crispasr_session_chords(crispasr_session* s, const float* pcm, int n_samples, int sample_rate);
CRISPASR_SESSION_API int crispasr_session_chords_n_spans(crispasr_session* s);
CRISPASR_SESSION_API const float* crispasr_session_chords_spans(crispasr_session* s, int* out_n_spans);
CRISPASR_SESSION_API const char* crispasr_session_chords_span_name(crispasr_session* s, int idx);
CRISPASR_SESSION_API int crispasr_session_chords_vocab_size(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_beats(crispasr_session* s, const float* pcm, int n_samples, int sample_rate);
CRISPASR_SESSION_API int crispasr_session_beats_n_events(crispasr_session* s);
CRISPASR_SESSION_API const float* crispasr_session_beats_events(crispasr_session* s, int* out_n_events);
CRISPASR_SESSION_API float crispasr_session_beats_tempo_bpm(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_beats_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_piano(crispasr_session* s, const float* pcm_16k, int n_samples);
CRISPASR_SESSION_API int crispasr_session_piano_n_notes(crispasr_session* s);
CRISPASR_SESSION_API const float* crispasr_session_piano_notes(crispasr_session* s, int* out_n_notes);
CRISPASR_SESSION_API int crispasr_session_piano_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API char* crispasr_session_translate_text(crispasr_session* s, const char* text, const char* src_lang,
                                                           const char* tgt_lang, int max_tokens);
CRISPASR_SESSION_API void crispasr_session_translate_text_free(char* text);
CRISPASR_SESSION_API crispasr_stream* crispasr_session_stream_open(crispasr_session* s, int n_threads, int step_ms,
                                                                   int length_ms, int keep_ms, const char* language,
                                                                   int translate);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_model_for_lang_abi(const char* model_path, const char* lang,
                                                                    char* out_path, int out_path_len);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_fallback_voice_abi(const char* model_path, const char* lang,
                                                                    char* out_path, int out_path_len, char* out_picked,
                                                                    int out_picked_len);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_model_for_lang_abi(const char*, const char*, char*, int);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_fallback_voice_abi(const char*, const char*, char*, int, char*, int);
CRISPASR_SESSION_API void* crispasr_titanet_init(const char* model_path, int32_t n_threads);
CRISPASR_SESSION_API void crispasr_titanet_free(void* ctx);
CRISPASR_SESSION_API int32_t crispasr_titanet_embed(void* ctx, const float* pcm_16k, int32_t n_samples, float* out);
CRISPASR_SESSION_API float crispasr_titanet_cosine_sim(const float* a, const float* b, int32_t dim);
CRISPASR_SESSION_API void* crispasr_speaker_db_open(const char* dir_path, const char* expected_names_csv,
                                                    int32_t consent_attested);
CRISPASR_SESSION_API void crispasr_speaker_db_free(void* db);
CRISPASR_SESSION_API int32_t crispasr_speaker_db_count(const void* db);
CRISPASR_SESSION_API float crispasr_speaker_db_match(const void* db, const float* embedding, int32_t dim,
                                                     float threshold, char* out_name, int32_t out_cap);
CRISPASR_SESSION_API int32_t crispasr_speaker_db_enroll2(const char* dir_path, const char* name, const float* embedding,
                                                         int32_t dim, int32_t consent_attested);