_build/CrispASR/include/crispasr.h


CRISPASR_API void whisper_log_set(ggml_log_callback log_callback, void* user_data);