_build/CrispASR/bindings/csharp/CrispASR/NativeMethods.cs


        // ---- Logging ----
        // ggml_log_callback: void (*)(ggml_log_level level, const char* text, void* user_data)
        // Cdecl is mandatory: native calls this back with the C calling convention,
        // and the delegate default (StdCall) would corrupt the stack on every log
        // line on the platforms CrispASR actually ships to.
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void GgmlLogCallback(int level, [MarshalAs(UnmanagedType.LPUTF8Str)] string? text, IntPtr userData);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void whisper_log_set(GgmlLogCallback? logCallback, IntPtr userData);

        // ---- Music / task backends (tab, beats, chords, piano, pitch, separate, convert) ----
        // Every `_events`/`_spans`/`_notes`/`_frames`/`_emissions`/`_stem`/`_audio`
        // getter returns a SESSION-OWNED float* valid only until the next run call
        // or session close — copy out immediately, never free it (unlike synthesize,
        // which owns its buffer and needs crispasr_pcm_free).

        // tab (guitar tablature)
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_tab(IntPtr s, float[] pcm, int nSamples, int sampleRate);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_tab_n_frames(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_tab_emissions(IntPtr s, out int nFrames, out int nStrings, out int nClasses);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_tab_silent_class(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_tab_frame_period(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_tab_string_open_midi(IntPtr s, int stringIndex);

        // beats (beat / downbeat tracking)
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_beats(IntPtr s, float[] pcm, int nSamples, int sampleRate);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_beats_n_events(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_beats_events(IntPtr s, out int nEvents);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_beats_tempo_bpm(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_beats_sample_rate(IntPtr s);

        // chords
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_chords(IntPtr s, float[] pcm, int nSamples, int sampleRate);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_chords_n_spans(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_chords_spans(IntPtr s, out int nSpans);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_chords_span_name(IntPtr s, int idx);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_chords_vocab_size(IntPtr s);

        // piano transcription
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_piano(IntPtr s, float[] pcm16k, int nSamples);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_piano_n_notes(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_piano_notes(IntPtr s, out int nNotes);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_piano_sample_rate(IntPtr s);

        // pitch (F0)
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_pitch(IntPtr s, float[] pcm16k, int nSamples, float hopMs);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_pitch_n_frames(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_pitch_frames(IntPtr s, out int nFrames);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_pitch_sample_rate(IntPtr s);

        // source separation
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_separate(IntPtr s, float[] pcmStereo, int nSamples);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_separate_n_stems(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_separate_stem_name(IntPtr s, int stemIdx);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_separate_stem(IntPtr s, int stemIdx, out int nSamples);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_separate_sample_rate(IntPtr s);

        // voice conversion (RVC content -> speaker)
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_convert(IntPtr s, float[] content, int nFrames,
            float[] f0Hz, int speakerId, float[]? noiseZp, float[]? noiseSine);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_convert_audio(IntPtr s, out int nSamples);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_convert_content_dim(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_convert_n_speakers(IntPtr s);
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_convert_sample_rate(IntPtr s);

        // ---- Streaming ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_stream_open(
            IntPtr s, int nThreads, int stepMs, int lengthMs,
            int keepMs, [MarshalAs(UnmanagedType.LPUTF8Str)] string language, int translate);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_feed(IntPtr stream, float[] pcm, int nSamples);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_get_text(
            IntPtr stream, byte[] outText, int outCap,
            out double outT0, out double outT1, out long outCounter);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_flush(IntPtr stream);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_stream_close(IntPtr stream);

        // ---- Kokoro lang helpers ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_kokoro_resolve_model_for_lang_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lang,
            byte[] outPath, int outPathLen);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_kokoro_resolve_fallback_voice_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lang,
            byte[] outPath, int outPathLen,
            byte[] outPicked, int outPickedLen);

        // ---- Backend detection ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_detect_backend_from_gguf(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            byte[] outName, int outCap);

        // ---- Audio enhancement ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_enhance_audio_rnnoise(
            float[] inPcm, int nSamples, float[] outPcm, int outCap);

        // ---- Speaker embedding (TitaNet) ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_titanet_init(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_titanet_free(IntPtr ctx);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_titanet_embed(IntPtr ctx, float[] pcm16k, int nSamples, float[] outEmb);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_titanet_cosine_sim(float[] a, float[] b, int dim);

        // ---- Speaker database (closed-roster, consent-gated — issue #266) ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_speaker_db_open(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string dirPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string expectedNamesCsv,
            int consentAttested);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_speaker_db_free(IntPtr db);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_speaker_db_count(IntPtr db);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_speaker_db_match(
            IntPtr db, float[] embedding, int dim, float threshold,
            byte[] outName, int outCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_speaker_db_enroll2(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string dirPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
            float[] embedding, int dim, int consentAttested);

        // ---- Text translation ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_translate_text(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string srcLang,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string tgtLang,
            int maxTokens);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_translate_text_free(IntPtr text);
